--- a/css/screen.scss
+++ b/css/screen.scss
@@ -43,7 +43,6 @@ $buff: #e3d2a1;
 $orchid: #d876ad;
 $flora: #f194c9;
 
-
 //color use assets
 $whiteTextShadow: 0 1px 0 $white;
 $dottedBorder: 1px dotted lighten($grey, 15%);
@@ -67,6 +66,15 @@ $dottedBorder: 1px dotted lighten($grey, 15%);
 	-ms-transition-delay: $delay;
 	-o-transition-delay: $delay;
 }
+
+@mixin pixelated {
+	image-rendering: -moz-crisp-edges;         	/* Firefox */
+	image-rendering: -o-crisp-edges;         		/* Opera */
+	image-rendering: -webkit-optimize-contrast;	/* Webkit (non-standard naming) */
+	image-rendering: pixelated;
+	-ms-interpolation-mode: nearest-neighbor;  	/* IE (non-standard property) */
+}
+
 body {
 	margin: 0;
 	font-family: $rooney;
@@ -78,13 +86,12 @@ body {
 
 	&.home {
 		nav a {
-			color: $white; 
-
+			color: $white;
 			&:hover {
-				color: $blueblack;
+				color: $flora;
 			}
-
 		}
+
 		footer {
 			background: $blueblack;
 		}
@@ -106,10 +113,12 @@ body {
 
 	&.left {
 		background: url('/images/index/sprite-left.png');
+		@include pixelated;
 	}
 
 	&.right {
 		background: url('/images/index/sprite-right.png');
+		@include pixelated;
 	}
 
 }
@@ -125,6 +134,7 @@ body {
 
 	&.flying {
 		background: url('/images/index/ufo.png');
+		@include pixelated;
 	}
 
 }
@@ -179,12 +189,14 @@ nav {
 		background: url('/images/index/onett.png') top center;
 		height: 1730px;
 		width: 100%;
+		@include pixelated;
 
 		#trees {
 			background: url('/images/index/z-trees.png') bottom center;
 			height: 1730px;
 			width: 100%;
 			position: absolute;
+			@include pixelated;
 		}
 
 	}
@@ -193,12 +205,14 @@ nav {
 		background: url('/images/index/saturn-valley.png') center center;
 		height: 2300px;
 		width: 100%;
+		@include pixelated;
 
 		#valley {
 			background: url('/images/index/z-saturn.png') center center;
 			height: 950px;
 			width: 100%;
 			position: absolute;
+			@include pixelated;
 		}		
 
 		#distorter {
@@ -208,10 +222,12 @@ nav {
 
 			&.phased1 {
 				background: url('/images/index/z-ufo1.png') center center;
+				@include pixelated;
 			}
 
 			&.phased2 {
 				background: url('/images/index/z-ufo2.png') center center;
+				@include pixelated;
 			}
 
 		}
@@ -222,12 +238,14 @@ nav {
 		background: url('/images/index/sky.png') center center;
 		width: 100%;
 		height: 1840px;
+		@include pixelated;
 
 		#clouds {
 			background: url('/images/index/z-clouds.png') center center;
 			height: 1840px;
 			width: 100%;
 			position: absolute;
+			@include pixelated;
 		}
 
 	}
@@ -236,6 +254,7 @@ nav {
 		width: 100%;
 		height: 1434px;
 		background: url('/images/index/moonside.png') center center;
+		@include pixelated;
 
 		#ending {
 			height: 580px;
@@ -244,6 +263,7 @@ nav {
 
 			&.show {
 				background: url('/images/index/ending.png') center center;
+				@include pixelated;
 			}
 
 		}
