separate background images and positions

--- a/css/screen.css
+++ b/css/screen.css
@@ -17,6 +17,17 @@ body {
   body.home footer {
     background: #0c2b3c; }
 
+.sprite {
+  image-rendering: -moz-crisp-edges;
+  /* Firefox */
+  image-rendering: -o-crisp-edges;
+  /* Opera */
+  image-rendering: -webkit-optimize-contrast;
+  /* Webkit (non-standard naming) */
+  image-rendering: pixelated;
+  -ms-interpolation-mode: nearest-neighbor;
+  /* IE (non-standard property) */ }
+
 #earthbounded {
   width: 54px;
   height: 58px;
@@ -27,7 +38,7 @@ body {
   margin-top: -29px;
   display: block; }
   #earthbounded.left {
-    background: url("/images/index/sprite-left.png");
+    background-image: url("/images/index/sprite-left.png");
     image-rendering: -moz-crisp-edges;
     /* Firefox */
     image-rendering: -o-crisp-edges;
@@ -38,7 +49,7 @@ body {
     -ms-interpolation-mode: nearest-neighbor;
     /* IE (non-standard property) */ }
   #earthbounded.right {
-    background: url("/images/index/sprite-right.png");
+    background-image: url("/images/index/sprite-right.png");
     image-rendering: -moz-crisp-edges;
     /* Firefox */
     image-rendering: -o-crisp-edges;
@@ -58,7 +69,7 @@ body {
   margin-left: -44px;
   margin-top: -43px; }
   #ufo.flying {
-    background: url("/images/index/ufo.png");
+    background-image: url("/images/index/ufo.png");
     image-rendering: -moz-crisp-edges;
     /* Firefox */
     image-rendering: -o-crisp-edges;
@@ -99,7 +110,8 @@ nav {
       font-size: 12px; }
 
 #onett {
-  background: url("/images/index/onett.png") top center;
+  background-image: url("/images/index/onett.png");
+  background-position: top center;
   height: 1730px;
   width: 100%;
   image-rendering: -moz-crisp-edges;
@@ -112,7 +124,8 @@ nav {
   -ms-interpolation-mode: nearest-neighbor;
   /* IE (non-standard property) */ }
   #onett #trees {
-    background: url("/images/index/z-trees.png") bottom center;
+    background-image: url("/images/index/z-trees.png");
+    background-position: bottom center;
     height: 1730px;
     width: 100%;
     position: absolute;
@@ -127,7 +140,8 @@ nav {
     /* IE (non-standard property) */ }
 
 #saturn {
-  background: url("/images/index/saturn-valley.png") center center;
+  background-image: url("/images/index/saturn-valley.png");
+  background-position: center center;
   height: 2300px;
   width: 100%;
   image-rendering: -moz-crisp-edges;
@@ -140,7 +154,8 @@ nav {
   -ms-interpolation-mode: nearest-neighbor;
   /* IE (non-standard property) */ }
   #saturn #valley {
-    background: url("/images/index/z-saturn.png") center center;
+    background-image: url("/images/index/z-saturn.png");
+    background-position: center center;
     height: 950px;
     width: 100%;
     position: absolute;
@@ -158,7 +173,8 @@ nav {
     width: 100%;
     position: absolute; }
     #saturn #distorter.phased1 {
-      background: url("/images/index/z-ufo1.png") center center;
+      background-image: url("/images/index/z-ufo1.png");
+      background-position: center center;
       image-rendering: -moz-crisp-edges;
       /* Firefox */
       image-rendering: -o-crisp-edges;
@@ -169,7 +185,8 @@ nav {
       -ms-interpolation-mode: nearest-neighbor;
       /* IE (non-standard property) */ }
     #saturn #distorter.phased2 {
-      background: url("/images/index/z-ufo2.png") center center;
+      background-image: url("/images/index/z-ufo2.png");
+      background-position: center center;
       image-rendering: -moz-crisp-edges;
       /* Firefox */
       image-rendering: -o-crisp-edges;
@@ -181,7 +198,8 @@ nav {
       /* IE (non-standard property) */ }
 
 #pinkcloud {
-  background: url("/images/index/sky.png") center center;
+  background-image: url("/images/index/sky.png");
+  background-position: center center;
   width: 100%;
   height: 1840px;
   image-rendering: -moz-crisp-edges;
@@ -194,7 +212,8 @@ nav {
   -ms-interpolation-mode: nearest-neighbor;
   /* IE (non-standard property) */ }
   #pinkcloud #clouds {
-    background: url("/images/index/z-clouds.png") center center;
+    background-image: url("/images/index/z-clouds.png");
+    background-position: center center;
     height: 1840px;
     width: 100%;
     position: absolute;
@@ -211,7 +230,8 @@ nav {
 #moonside {
   width: 100%;
   height: 1434px;
-  background: url("/images/index/moonside.png") center center;
+  background-image: url("/images/index/moonside.png");
+  background-position: center center;
   image-rendering: -moz-crisp-edges;
   /* Firefox */
   image-rendering: -o-crisp-edges;
@@ -226,7 +246,8 @@ nav {
     width: 100%;
     position: absolute; }
     #moonside #ending.show {
-      background: url("/images/index/ending.png") center center;
+      background-image: url("/images/index/ending.png");
+      background-position: center center;
       image-rendering: -moz-crisp-edges;
       /* Firefox */
       image-rendering: -o-crisp-edges;
