--- a/css/screen.scss
+++ b/css/screen.scss
@@ -125,6 +125,11 @@ body {
 		@include pixelated;
 	}
 
+	&.walk {
+		background-image: url('/images/bysusanlin-earthbound.gif')
+		@include pixelated;
+	}
+
 }
 
 #ufo {
