actually use the code

--- a/css/screen.scss
+++ b/css/screen.scss
@@ -126,7 +126,7 @@ body {
 	}
 
 	&.walk {
-		background-image: url('/images/bysusanlin-earthbound.gif')
+		background-image: url('/images/bysusanlin-earthbound.gif');
 		@include pixelated;
 	}
 
