--- a/css/screen.css
+++ b/css/screen.css
@@ -309,7 +309,8 @@ nav {
   position: relative;
   padding-bottom: 56.25%;
   padding-top: 25px;
-  height: 0; }
+  height: 0;
+  max-width: 1200px; }
   #talks .video .video-wrapper iframe {
     position: absolute;
     top: 0;
