--- a/css/screen.scss
+++ b/css/screen.scss
@@ -367,9 +367,10 @@ nav {
 
 			.video-wrapper {
 				position: relative;
-					padding-bottom: 56.25%; //16:9 aspect ratio
-					padding-top: 25px;
-					height: 0;
+				padding-bottom: 56.25%; //16:9 aspect ratio
+				padding-top: 25px;
+				height: 0;
+				max-width: 1200px;
 
 					iframe {
 						position: absolute;
