--- a/css/screen.css
+++ b/css/screen.css
@@ -309,14 +309,14 @@ nav {
   position: relative;
   padding-bottom: 56.25%;
   padding-top: 25px;
-  height: 0;
-  max-width: 1200px; }
+  height: 0; }
   #talks .video .video-wrapper iframe {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%; }
+    height: 100%;
+    max-width: 1200px; }
 #talks .speakerdeck-wrapper {
   padding-left: 0; }
 
