--- a/css/screen.css
+++ b/css/screen.css
@@ -16,6 +16,8 @@ body {
       color: #f194c9; }
   body.home footer {
     background: #0c2b3c; }
+    body.home footer ul a {
+      color: #36b5ab; }
 
 .sprite {
   image-rendering: -moz-crisp-edges;
@@ -329,8 +331,6 @@ nav {
     font-size: 16px;
     font-weight: 300;
     line-height: 28.8px; }
-  #about div img {
-    max-width: 100%; }
 #about h2 {
   font-size: 32px;
   font-family: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif;
