--- a/css/screen.css
+++ b/css/screen.css
@@ -1,10 +1,30 @@
 @font-face {
   font-family: 'Pluto Sans Cond Light';
   src: url("/fonts/pluto-sans.eot");
-  src: url("/fonts/pluto-sans.eot?#iefix") format("embedded-opentype"), url("/fonts/pluto-sans.woff") format("woff"), url("/fonts/pluto-sans.ttf") format("truetype"); }
+  src: url("/fonts/pluto-sans.eot?#iefix") format("embedded-opentype"), url("/fonts/pluto-sans.woff") format("woff"), url("/fonts/pluto-sans.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal; }
+@font-face {
+  font-family: 'Rooney Web';
+  src: url("/fonts/rooney-light.eot");
+  src: url("/fonts/rooney-light.eot?#iefix") format("embedded-opentype"), url("/fonts/rooney-light.woff") format("woff"), url("/fonts/rooney-light.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal; }
+@font-face {
+  font-family: 'Rooney Web';
+  src: url("/fonts/rooney-light-italic.eot");
+  src: url("/fonts/rooney-light-italic.eot?#iefix") format("embedded-opentype"), url("/fonts/rooney-light-italic.woff") format("woff"), url("/fonts/rooney-light-italic.ttf") format("truetype");
+  font-weight: 300;
+  font-style: italic; }
+@font-face {
+  font-family: 'Rooney Web';
+  src: url("/fonts/rooney-bold.eot");
+  src: url("/fonts/rooney-bold.eot?#iefix") format("embedded-opentype"), url("/fonts/rooney-bold.woff") format("woff"), url("/fonts/rooney-bold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal; }
 body {
   margin: 0;
-  font-family: "rooney-web-1", "rooney-web-2", "Lora", Georgia, serif;
+  font-family: "Rooney Web", "Lora", Georgia, serif;
   font-size: 16px;
   font-weight: 300;
   line-height: 1.8em;
