--- a/css/screen.scss
+++ b/css/screen.scss
@@ -12,7 +12,7 @@ $p: 16px;
 
 //type faces
 $plutosans: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif;
-$rooney: "rooney-web-1","rooney-web-2", "Lora", Georgia, serif;
+$rooney: "Rooney Web", "Lora", Georgia, serif;
 
 //colors
 $blacker: #111;
@@ -52,6 +52,36 @@ $dottedBorder: 1px dotted lighten($grey, 15%);
 	font-family: 'Pluto Sans Cond Light';
 	src: url('/fonts/pluto-sans.eot');
 	src: url('/fonts/pluto-sans.eot?#iefix') format('embedded-opentype'), url('/fonts/pluto-sans.woff') format('woff'), url('/fonts/pluto-sans.ttf') format('truetype');
+	font-weight: normal;
+  font-style: normal;
+}
+//rooney web pls
+@font-face {
+	font-family: 'Rooney Web';
+	src: url('/fonts/rooney-light.eot');
+	src: url('/fonts/rooney-light.eot?#iefix') format('embedded-opentype'), 
+				url('/fonts/rooney-light.woff') format('woff'), 
+				url('/fonts/rooney-light.ttf') format('truetype');
+	font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+	font-family: 'Rooney Web';
+	src: url('/fonts/rooney-light-italic.eot');
+	src: url('/fonts/rooney-light-italic.eot?#iefix') format('embedded-opentype'), 
+				url('/fonts/rooney-light-italic.woff') format('woff'), 
+				url('/fonts/rooney-light-italic.ttf') format('truetype');
+	font-weight: 300;
+  font-style: italic;
+}
+@font-face {
+	font-family: 'Rooney Web';
+	src: url('/fonts/rooney-bold.eot');
+	src: url('/fonts/rooney-bold.eot?#iefix') format('embedded-opentype'), 
+				url('/fonts/rooney-bold.woff') format('woff'), 
+				url('/fonts/rooney-bold.ttf') format('truetype');
+	font-weight: bold;
+  font-style: normal;
 }
 //I use this mixin a lot
 @mixin transition($duration, $property: all, $delay:0) {
