--- a/css/screen.css
+++ b/css/screen.css
@@ -351,6 +351,8 @@ nav {
     font-size: 16px;
     font-weight: 300;
     line-height: 28.8px; }
+  #about div img {
+    max-width: 100%; }
 #about h2 {
   font-size: 32px;
   font-family: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif;
