--- a/css/screen.css
+++ b/css/screen.css
@@ -35,7 +35,8 @@ body {
     font-weight: bold; }
   body em, body i {
     font-family: 'Rooney Web Italic';
-    font-style: italic; }
+    font-style: italic;
+    font-weight: 300; }
   body.home nav a {
     color: #fff; }
     body.home nav a:hover {
