--- a/css/screen.scss
+++ b/css/screen.scss
@@ -118,9 +118,11 @@ body {
 	  font-family: 'Rooney Web Bold';
 		font-weight: bold; 
 	}
+	
 	em, i { 
 	  font-family: 'Rooney Web Italic';
 		font-style: italic; 
+		font-weight: 300;
 	}
 
 	&.home {
